# rusfun

./: Cargo.toml
benches/: quick_benchmark.rs
src/: curve_fit.rs  func1d.rs  lib.rs  utils.rs  wasm.rs
src/sas/: cube.rs  sphere.rs
