[package]
name = "rusfun"
version = "0.3.4"
authors = ["DomiDre <dominiquedresen@gmail.com>"]
edition = "2018"
description = "Little experimental crate to fit simple models to data via WASM in the browser"
repository = "https://github.com/domidre/rusfun"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = "0.16"
gauss-quad = {git = "https://github.com/ddboline/gauss-quad.git"}
criterion = "0.5"

[[bench]]
name = "quick_benchmark"
harness = false
